[gd_scene load_steps=11 format=2]

[ext_resource path="res://prefab/node.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefab/home.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/beat.gd" type="Script" id=3]
[ext_resource path="res://prefab/button/delete_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/button/spawn_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefab/tilemaps/restricted_area.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefab/button/bomb_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefab/stage_clear.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefab/game_over.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefab/tilemaps/dirt.tscn" type="PackedScene" id=10]

[node name="beat" type="Node2D" groups=[
"head",
]]
script = ExtResource( 3 )

[node name="restricted_area" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327685, 0, 0, 327690, 0, 0, 393221, 0, 0, 393226, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0 )

[node name="dirt_tile" parent="." instance=ExtResource( 10 )]
tile_data = PoolIntArray( 262144, 2, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 9, 0, 262156, 9, 0, 262157, 9, 0, 262158, 9, 0, 262159, 0, 0 )

[node name="way1" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="1" parent="way1" instance=ExtResource( 1 )]
position = Vector2( -64, 288 )

[node name="2" parent="way1" instance=ExtResource( 1 )]
position = Vector2( 384, 288 )

[node name="3" parent="way1" instance=ExtResource( 1 )]
position = Vector2( 352, 512 )

[node name="4" parent="way1" instance=ExtResource( 1 )]
position = Vector2( 704, 480 )

[node name="5" parent="way1" instance=ExtResource( 1 )]
position = Vector2( 672, 256 )

[node name="6" parent="way1" instance=ExtResource( 1 )]
position = Vector2( 1024, 288 )

[node name="way2" type="Node2D" parent="."]
visible = false

[node name="1" parent="way2" instance=ExtResource( 1 )]
position = Vector2( 1024, 288 )

[node name="home" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 288 )

[node name="spawn_timer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "interval enemy spawning"
}

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( -64, 288 )

[node name="can_spawn" type="Label" parent="."]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 70.0
text = "can_spawn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 5.8, 3.8 )
text = "console"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money_label" type="Label" parent="."]
margin_left = 72.0
margin_top = 464.0
margin_right = 112.0
margin_bottom = 478.0
rect_scale = Vector2( 3.9, 3.2 )
text = "$$$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Node2D" parent="."]

[node name="spawn_tower" parent="buttons" instance=ExtResource( 5 )]
position = Vector2( 64, 512 )

[node name="delete_tower" parent="buttons" instance=ExtResource( 4 )]
position = Vector2( 192, 512 )

[node name="bomb_button" parent="buttons" groups=[
"button",
] instance=ExtResource( 7 )]
position = Vector2( 128, 512 )

[node name="stage_clear" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 376, 240 )
z_index = 11

[node name="game_over" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 360, 192 )
[connection signal="game_over" from="home" to="." method="_on_home_game_over"]
